--- a/css/style.css
+++ b/css/style.css
@@ -585,7 +585,6 @@ footer ul {
       width: 150px;
   }
  
-  p,
   .mainContentOfAcc p,
   .mainContentPopular > p{
       font-size: 15px;
@@ -634,7 +633,7 @@ footer ul {
 
 #accomodations,
 #popular{
-  width: 110%;
+  width: 105%;
 }
 
 
@@ -643,6 +642,7 @@ footer ul {
   width: 100%;
   height: 100%;
 }
+
 
 
 .popularTitle {
@@ -660,7 +660,7 @@ footer ul {
 
 .contentPopular figure p{
   padding-bottom: 15px;
-  padding-right: 12px;
+  padding-right: 15px;
 }
 
 
@@ -681,12 +681,17 @@ footer ul {
 }
 
 .imgPopular {
-  width: 70px;
+  width: 65px;
   height: 140px;
+  margin: 5px 0px;
   border-radius: 20px;
 }
 
-.mainContentActivity, .thirdActivityBlock, .contentSmall2, .contentSmall4, .contentSmall1, .contentSmall3{
+.mainContentActivity{
+ width: 100%;
+} 
+
+.thirdActivityBlock, .contentSmall2, .contentSmall4, .contentSmall1, .contentSmall3{
   padding-bottom: 10px;
 }
 
