--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
+
 *{
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
   
 
@@ -47,6 +47,10 @@ li {
 
 #headerMob {
   display: none;
+}
+
+.navbar .logo img {
+  width: 100px;
 }
 
 main .topnav, .sectionFiltres { 
