--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ li {
   padding: 5px 20px;
 }
 
+
 #headerMob {
   display: none;
 }
@@ -138,6 +139,11 @@ nav a:hover::before {
   margin: 0;
   border-top-left-radius: 15px 15px;
   border-bottom-left-radius: 15px 15px;
+}
+
+.searchBox button:hover {
+  background-color:#caddf8;
+  color: black;
 }
 
 
@@ -335,6 +341,12 @@ p.captionOfAcc {
   font-weight: bold;
   font-size: 15px;
 }
+
+.more :hover { 
+  text-decoration: underline; 
+	text-decoration-color: blue;
+}
+
 
 
 /* POPULAR */
