--- a/css/style.css
+++ b/css/style.css
@@ -923,7 +923,7 @@ h2.accomodationTitle {
 }
 
 .contentSmall2 {
-  height: 320px;
+  height: 330px;
 }
 
 footer {
@@ -935,7 +935,7 @@ footer {
 .about,
 .ourAcc{
   margin-right: 0;
-  padding-bottom: 20px;
+  padding: 30px 0px;
 }
 .about h3,
 .ourAcc h3,
