--- a/css/style.css
+++ b/css/style.css
@@ -719,7 +719,7 @@ footer li{
 body {
   font-family: 'Raleway', sans-serif;
   align-items: center;
-  width: 600px;
+  width: 620px;
 }
 
 #header {
@@ -828,7 +828,7 @@ form > input{
 }
 
 .sectionFiltres p {
-  font-size: 25px;
+  font-size: 23px;
 }
 
 
@@ -854,7 +854,6 @@ form > input{
 .mainPopularAcc{
   display: flex;
   flex-direction: column;
-
 }
 
 #accomodations,
@@ -864,7 +863,7 @@ form > input{
 
 
 #accomodations {
-  margin: 20px;
+  margin: 10px;
   order: 2;
   background-color: white;
 }
@@ -886,7 +885,7 @@ form > input{
 h2.accomodationTitle {
   padding: 0;
   text-align: center;
-  font-size: 25px;
+  font-size: 30px;
 }
 
 
@@ -911,8 +910,8 @@ h2.accomodationTitle {
 
 
 #activites > h2 {
-  font-size: 20px;
-  margin: 35px 0;
+  font-size: 25px;
+  margin: 30px 0;
   padding: 0 1.5em;
 }
 
@@ -938,8 +937,9 @@ h2.accomodationTitle {
 .mainContentActivity{
   display: flex;
   flex-direction: column;
-
+  margin-left: 20px;
 }
+
 .firstActivityBlock, .secondActivityBlock, .thirdActivityBlock {
   margin: 10px 0;
   height: 250px;
@@ -958,6 +958,7 @@ h2.accomodationTitle {
 .contentSmall2 {
   height: 300px;
 }
+
 
 footer {
   display: block;
