--- a/css/style.css
+++ b/css/style.css
@@ -622,7 +622,6 @@ footer > div > ul {
   width: 96%;
 }
 
-
 .mainContentPopular{
   display:flex;
   flex-direction: row;
@@ -666,36 +665,117 @@ footer > div > ul {
   border-radius: 20px;
 }
 
-.mainContentActivity{
- width: 100%;
-} 
-
-.thirdActivityBlock, .contentSmall2, .contentSmall4, .contentSmall1, .contentSmall3{
-  padding-bottom: 10px;
+#activites {
+  padding-top: 30px;
 }
 
-
-#activites h2{
-  padding-left: 3%;
+h2 {
+  margin: 20px 20px;
+  font-size: 23px;
 }
 
-.textActivity {
+.mainContentActivity {
   display: flex;
-  padding-top: 10px;
-  margin: 0;
+  width: 110%;
+}
+
+.secondActivityBlock,
+.fourthActivityBlock {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 
-.firstActivityBlock, .secondActivityBlock, .thirdActivityBlock{
-  margin-right: 20px;
+.firstActivityBlock,
+.thirdActivityBlock {
+  height: 450px;
+  width: 700px;
+}
+
+.secondActivityBlock,
+.fourthActivityBlock{
+  height: 450px;
+  width: 500px;
+}
+
+.firstActivityBlock,
+.thirdActivityBlock,
+.contentSmall1,
+.contentSmall2,
+.contentSmall3,
+.contentSmall4 {
+  box-shadow: 0px 0px 20px lightgrey;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+
+.firstActivityBlock:hover,
+.thirdActivityBlock:hover,
+.contentSmall1:hover,
+.contentSmall2:hover,
+.contentSmall3:hover,
+.contentSmall4:hover {
+  transform: scale(1.05);
+  transition: 0.3s;
+}
+
+
+.firstActivityBlock,
+.secondActivityBlock,
+.thirdActivityBlock {
+  margin-right: 30px;
+}
+
+.contentSmall1 {
+  height: 60%;
+}
+
+
+.contentSmall2 {
+  height: 30%;
+}
+
+
+.contentSmall3,
+.contentSmall4 {
+  height: 45%;
 }
 
 .blockFigureLarge {
-  width: auto;
-  height: 90%;
+  height: 85%;
 }
 
 
+.blockFigureSmall1 {
+  height: 80%;
+}
+
+
+.blockFigureSmall2 {
+  height: 65%;
+}
+
+
+.blockFigureSmall3,
+.blockFigureSmall4 {
+  height: 70%;
+}
+
+.imgActivity {
+  width: 100%;
+  height: 95%;
+  object-fit: cover;
+}
+
+
+.textActivity  {
+  padding-left: 10px;
+  padding-top: 0px;
+  color: black;
+  font-weight: bold;
+}
 
 
 footer {
