--- a/css/style.css
+++ b/css/style.css
@@ -898,7 +898,7 @@ form > input{
     margin: 10px;
 }
 
-.sectionFiltres > h4 {
+.sectionFiltres h4 {
     line-height: 1;
     margin: 20px 30px;
     font-size: 25px;
