--- a/css/style.css
+++ b/css/style.css
@@ -802,7 +802,7 @@ footer li{
 body {
   font-family: 'Raleway', sans-serif;
   align-items: center;
-  width: 700px;
+  width: 650px;
 }
 
 #header {
@@ -943,7 +943,7 @@ form > input {
 
 #accomodations,
 #popular {
-  width: 100%;
+  width: 110%;
 }
 
 
@@ -954,7 +954,7 @@ form > input {
 }
 
 .frameworkAcc {
-  height: 150px;
+  height: 200px;
 }
 
 .frameworkAcc .imageAcc {
@@ -962,7 +962,7 @@ form > input {
 }
 
 .contentAcc {
-  width: 500px;
+  width: 600px;
   box-shadow: 0 5px 5px #d1d1d1;
 }
 
@@ -971,6 +971,10 @@ h2.accomodationTitle {
   padding: 0;
   text-align: center;
   font-size: 30px;
+}
+
+.accomodationSubject {
+  font-size: 25px;
 }
 
 
@@ -989,9 +993,14 @@ h2.accomodationTitle {
   padding: 20px 50px;
 }
 
+.popularTitle h2 {
+  font-size: 30px;
+  padding-left: 30px;
+}
+
 .contentPopular {
-  height: 200px;
-  width: 500px;
+  height: 210px;
+  width: 600px;
 }
 
 
@@ -1028,13 +1037,13 @@ h2.accomodationTitle {
 
 .firstActivityBlock, .secondActivityBlock, .thirdActivityBlock {
   margin: 10px 0;
-  height: 250px;
-  width: 500px;
+  height: 260px;
+  width: 570px;
 }
 
 .secondActivityBlock, .fourthActivityBlock {
-  height: 550px;
-  width: 500px;
+  height: 560px;
+  width: 570px;
 }
 
 .firstActivityBlock, .thirdActivityBlock, .contentSmall1, .contentSmall2, .contentSmall3, .contentSmall4 {
@@ -1042,14 +1051,14 @@ h2.accomodationTitle {
 }
 
 .contentSmall2 {
-  height: 300px;
+  height: 330px;
 }
 
 
 footer {
   display: block;
   margin-top: 25px;
-  width: 660px;
+  width: 680px;
   height: 420px;
 
 }
